--- a/assets/css/water-consumption-manager.css
+++ b/assets/css/water-consumption-manager.css
@@ -8,9 +8,7 @@
   --font-semi: 600;
 
   --panel-width: calc(120% / 6);
-  --darkblue: #02020c;
-  --white: #fff;
-  --lightgray: #fafafb;
+
   /*===== Colores =====*/
   /*Purple 260 - Red 355 - Blue 224 - Pink 340*/
   /* HSL color mode */
@@ -121,7 +119,8 @@ img {
   transform: translateX(-50%) skewX(-35deg);
   clip-path: none;
   z-index: 100;
-  background: var(--lightgray);
+  background: white;
+  list-style: none;
 }
 
 .panels .panel {
@@ -132,7 +131,7 @@ img {
   width: var(--panel-width);
   transform: scaleY(0);
   transform-origin: top;
-  background: var(--darkblue);
+  background: black;
 }
 
 .panels .panel:nth-child(even) {
@@ -404,13 +403,11 @@ hr {
 .application__img,
 .enclosure__img {
   position: relative;
-  height: 300px;
 }
 
 .electronics img,
 .application img,
 .enclosure img {
-  height: 300px;
   width: 100%;
 }
 
