--- a/assets/css/generic.css
+++ b/assets/css/generic.css
@@ -1,24 +1,95 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@400;500;600&display=swap");
 
-body{
-    margin: 0;
-    padding: 0;
+:root {
+  --panel-width: calc(120% / 6);
 }
 
-.construction{
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-size: large;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 100%;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.construction i{
-    text-decoration: none;
-    color: black;
-    font-size: 2rem;
-    padding-right: 1rem;
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+/*===== ANIMATION =====*/
+.panels {
+  margin: 0;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  width: 180vw;
+  height: 100%;
+  transform: translateX(-50%) skewX(-35deg);
+  clip-path: none;
+  z-index: 100;
+  background: white;
+}
+
+.panels .panel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: var(--panel-width);
+  transform: scaleY(0);
+  transform-origin: top;
+  background: black;
+}
+
+.panels .panel:nth-child(even) {
+  transform-origin: bottom;
+}
+
+.panels .panel:nth-child(2) {
+  left: calc(var(--panel-width) - 1px);
+}
+
+.panels .panel:nth-child(3) {
+  left: calc(calc(var(--panel-width) * 2) - 2px);
+}
+
+.panels .panel:nth-child(4) {
+  left: calc(calc(var(--panel-width) * 3) - 4px);
+}
+
+.panels .panel:nth-child(5) {
+  left: calc(calc(var(--panel-width) * 4) - 5px);
+}
+
+.panels .panel:nth-child(6) {
+  left: calc(calc(var(--panel-width) * 5) - 6px);
+}
+
+@media (max-width: 1024px) {
+  .panels {
+    width: 200vw;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .panels {
+    width: 235vw;
+  }
+}
+
+.construction {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: large;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.construction i {
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  padding-right: 1rem;
 }
